# Product-Insights-Copilot--Milestone-2

./: .env.example  .gitignore  CLAUDE.md  README.md  products.yaml
.github/workflows/: weekly-pulse.yml
Docs/: Architecture.md  weekly-pulse-debugging-postmortem.md
Docs/phases/phase-0-foundations/: evaluations.md
Docs/phases/phase-1-ingestion/: edge-cases.md  evaluations.md
Docs/phases/phase-3-summarization/: evaluations.md
Docs/phases/phase-5-docs-mcp/: evaluations.md
Docs/phases/phase-6-gmail-mcp/: edge-cases.md  evaluations.md
Docs/phases/phase-7-orchestration/: evaluations.md
agent/: __main__.py  config.py  logging_setup.py  models.py  observability.py  orchestrator.py  storage.py
agent/clustering/: embeddings.py  pipeline.py
agent/ingestion/: __init__.py  appstore.py  filters.py  playstore.py
agent/mcp_client/: gmail_ops.py  session.py
agent/renderer/: __init__.py
agent/rest_client/: docs_rest.py  gmail_rest.py
agent/summarization/: client.py  pipeline.py
docs/: Architecture.md  Implementation-Plan.md  Problem-Statement.md  Repository-Cleanup-Plan.md
docs/MCP-server/: plan-a-thin-rest-client.md  plan-b-extend-deployed-server.md
docs/phases/phase-0-foundations/: edge-cases.md
docs/phases/phase-2-clustering/: edge-cases.md  evaluations.md
docs/phases/phase-3-summarization/: edge-cases.md
docs/phases/phase-4-renderer/: edge-cases.md  evaluations.md
docs/phases/phase-5-docs-mcp/: edge-cases.md
docs/phases/phase-7-orchestration/: edge-cases.md
docs/postmortems/: gemini-debugging-weekly-pulse.md  weekly-pulse-ci-failure-log.md
phases/: .env.example  README.md
phases/phase-0-foundations/: .env.example  Dockerfile  README.md  pyproject.toml
phases/phase-0-foundations/.github/workflows/: ci.yml
phases/phase-0-foundations/agent/: __main__.py  storage.py
phases/phase-0-foundations/tests/: conftest.py
phases/phase-1-ingestion/: README.md  docker-compose.yml  pyproject.toml
phases/phase-1-ingestion/agent/: __main__.py  config.py  helpers.py
phases/phase-1-ingestion/agent/ingestion/: filters.py
phases/phase-1-ingestion/tests/: test_ingestion.py  test_smoke.py
phases/phase-1-ingestion/tests/fixtures/: playstore_groww.json
phases/phase-2-clustering/: README.md  pyproject.toml
phases/phase-2-clustering/agent/: __main__.py  config.py  models.py
phases/phase-2-clustering/tests/: conftest.py  test_clustering.py
phases/phase-2-clustering/tests/fixtures/: appstore_groww_page1.json
phases/phase-3-summarization/: README.md  pyproject.toml
phases/phase-3-summarization/agent/: __main__.py
phases/phase-3-summarization/agent/clustering/: __init__.py
phases/phase-3-summarization/agent/summarization/: __init__.py  pipeline.py  prompts.py
phases/phase-3-summarization/tests/: test_summarization.py
phases/phase-3-summarization/tests/fixtures/: reviews_snapshot.jsonl
phases/phase-4-renderer/: .env.example  README.md  pyproject.toml
phases/phase-4-renderer/agent/: __main__.py  config.py  helpers.py
phases/phase-4-renderer/agent/clustering/: pipeline.py
phases/phase-4-renderer/agent/renderer/: __init__.py  docs_tree.py  email_html.py
phases/phase-4-renderer/tests/: conftest.py  test_renderer.py  test_smoke.py
phases/phase-4-renderer/tests/fixtures/: doc_requests_groww.json  email_groww.html
phases/phase-5-docs-mcp/: .env.example  Dockerfile  README.md  docker-compose.yml  products.yaml  pyproject.toml
phases/phase-5-docs-mcp/agent/: __main__.py  config.py  helpers.py  logging_setup.py
phases/phase-5-docs-mcp/agent/renderer/: docs_tree.py
phases/phase-5-docs-mcp/agent/rest_client/: docs_rest.py
phases/phase-5-docs-mcp/tests/: test_docs_mcp.py
phases/phase-6-gmail-mcp/: .env.example  README.md  products.yaml  pyproject.toml
phases/phase-6-gmail-mcp/agent/: __main__.py
phases/phase-6-gmail-mcp/agent/mcp_client/: docs_ops.py  errors.py
phases/phase-6-gmail-mcp/agent/renderer/: email_html.py
phases/phase-6-gmail-mcp/services/gmail-mcp/: Dockerfile  server.py
phases/phase-6-gmail-mcp/templates/: doc_section.schema.json
phases/phase-7-orchestration/: .gitignore  README.md  docker-compose.yml  products.yaml  pyproject.toml
phases/phase-7-orchestration/agent/: __main__.py  observability.py
phases/phase-7-orchestration/agent/clustering/: embeddings.py
phases/phase-7-orchestration/agent/summarization/: client.py
phases/phase-7-orchestration/docs/: runbook.md
phases/phase-7-orchestration/services/gmail-mcp/: pyproject.toml
phases/phase-7-orchestration/tests/: conftest.py
phases/phase-7-orchestration/tests/mocks/: docs_mcp_server.py  gmail_mcp_server.py
services/docs-mcp/: Dockerfile  pyproject.toml  server.py
services/gmail-mcp/: server.py
templates/: email.html  email.txt
tests/: test_gmail_mcp.py  test_orchestrator.py  test_smoke.py
tests/fixtures/: pulse_summary_groww.json
tests/mocks/: gmail_mcp_server.py
