[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulse"
version = "0.2.0"
description = "Weekly Product Review Pulse Agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "jinja2>=3.1",
    "structlog>=24.2",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.6",
    "python-dotenv>=1.0",
    "google-play-scraper>=1.2",
    "langdetect>=1.0.9",
    # Phase 2
    "openai>=1.30",
    "sentence-transformers>=3.0",
    "umap-learn>=0.5",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "keybert>=0.8",
]

[project.scripts]
pulse = "agent.__main__:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = ["slow: marks tests that require model downloads or GPU"]
