[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulse"
version = "0.5.0"
description = "Weekly Product Review Pulse Agent — Phase 5: Google Docs MCP Append"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "jinja2>=3.1",
    "structlog>=24.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "jsonschema>=4.23",
    "tzdata>=2024.1",
    # Phase 5 — MCP client
    "mcp>=1.0",
    "httpx>=0.27",
    # load_dotenv() in _setup() puts .env vars into os.environ for subprocess inheritance
    "python-dotenv>=1.0",
]

[project.scripts]
pulse = "agent.__main__:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "types-jsonschema>=4.23",
]

# Phase 5 — docs-mcp service deps (installed separately in services/docs-mcp/)
# google-api-python-client>=2.130, google-auth>=2.30, fastmcp>=2.0

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"
markers = [
    "slow: marks tests that require model downloads or live API calls",
    "integration: marks tests that require real Google credentials",
]
