[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulse-gmail-mcp"
version = "0.1.0"
description = "FastMCP server — Gmail API wrapper for Pulse Agent"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "google-api-python-client>=2.130",
    "google-auth>=2.30",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
